# perovskite-materials-ml-system

./: pyproject.toml
ml_models/: pce_jv_model.joblib  xgboost_band_gap.joblib
notebooks/: jv_default_prediction.ipynb  stability_prediction.ipynb
src/: standalone.py
src/ml_prediction_web_service/: app.py  components.py  configuration.py
src/ml_prediction_web_service/api/: prediction_router.py  ui_router.py
src/ml_prediction_web_service/api/static/: script.js
src/ml_prediction_web_service/api/templates/: index.html
src/ml_prediction_web_service/entities/: dictionary.py  entities.py
src/ml_prediction_web_service/google_storage/: storage.py
src/ml_prediction_web_service/repository/: model_repository.py
src/ml_prediction_web_service/services/: prediction_service.py  preparation.py
src/ml_prediction_web_service/services/features/: calc_factors.py  structure_features.py
src/perovskite_prediction_api/: app.py
src/perovskite_prediction_api/api/: components.py  configuration.py
src/perovskite_prediction_api/api/prediction/: prediction_router.py  prediction_service.py  preparation.py
src/perovskite_prediction_api/entities/: dictioanary_materials.py  dictionary_api.py  entities.py  model_dictionary.py
src/perovskite_prediction_api/features/: structure_features.py
src/perovskite_prediction_api/google_storage/: credentials.py
src/perovskite_prediction_api/repository/: model_repository.py
tests/: conftest.py
tests/unit/: test_google_storage.py
tests/unit/test_prediction_service/: test_prediction_service.py  test_preparation.py
(+1 files in other folders)
